--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.4/js/mdb.min.js"></script>
+  <!-- Stripe -->
+  <script src="https://js.stripe.com/v3/"></script>
   <script defer src="/bundle.js"></script>
 </head>
 
